--- a/Pra-1/2.html
+++ b/Pra-1/2.html
@@ -1,12 +1,17 @@
 <html>
     <head>
-        <title>unordered list</title>
+        <title>list</title>
     </head>
     <body>
         <ul>
             <li>AWT</li>
             <li>DAV</li>
             <li>AIA</li>
-        </ul>    
+        </ul>  
+        <ol> 
+            <li>AWT</li>
+            <li>DAV</li>
+            <li>AIA</li>
+        </ol>
     </body>
 </html>
