--- a/Pra-1/3.html
+++ b/Pra-1/3.html
@@ -4,7 +4,6 @@
 </head>
 <body>
   <h1>Welcome to my web page!</h1>
-  <img src="https://www.google.com/url?sa=i&url=https%3A%2F%2Fimgupscaler.com%2F&psig=AOvVaw3QJO0ym_HSg2kx7Al_1-0R&ust=1704793622554000&source=images&cd=vfe&opi=89978449&ved=0CBIQjRxqFwoTCPCJ75bAzYMDFQAAAAAdAAAAABAH" 
-  alt="Image ">
+  <img src="Z:\img.jpg" alt="Image ">
 </body>
 </html>
